quick-fix: fix background color for status on users table on mobile

--- a/src/pages/users/userslist/components/UsersTable.scss
+++ b/src/pages/users/userslist/components/UsersTable.scss
@@ -199,7 +199,9 @@
 				}
 
 				&.mobile {
+					display: inline-block;
 					margin-left: 20px;
+					text-transform: capitalize;
 					@include md-breakpoint {
 						display: none;
 					}
